--- a/config.json
+++ b/config.json
@@ -2,11 +2,13 @@
     "name": "CTRI Tweaks",
     "description": "Various minor project tweaks.",
     "namespace": "UWMadison\\CTRItweaks",
-    "authors": [{
-        "name": "Adam Nunez",
-        "email": "Adam.Nunez@ctri.wisc.edu",
-        "institution": "UW Madison - Center for Tobacco Research and Intervention "
-    }],
+    "authors": [
+        {
+            "name": "Adam Nunez",
+            "email": "Adam.Nunez@ctri.wisc.edu",
+            "institution": "UW Madison - Center for Tobacco Research and Intervention"
+        }
+    ],
     "permissions": [
         "redcap_every_page_top",
         "redcap_data_entry_form",
@@ -15,12 +17,16 @@
         "redcap_survey_page",
         "redcap_survey_page_top"
     ],
-    "system-settings": [{
-        "key": "testing-global",
-        "name": "<b>Testing Global:</b><br>Used for Testing and Staging projects",
-        "type": "text"
-    }],
-    "project-settings": [{
+    "framework-version": 11,
+    "system-settings": [
+        {
+            "key": "testing-global",
+            "name": "<b>Testing Global:</b><br>Used for Testing and Staging projects",
+            "type": "text"
+        }
+    ],
+    "project-settings": [
+        {
             "key": "project-home-alert",
             "name": "<b>Home page alert</b>",
             "type": "textarea"
@@ -102,6 +108,6 @@
         }
     ],
     "compatibility": {
-        "redcap-version-min": "8.0.3"
+        "redcap-version-min": "12.5.9"
     }
 }
