--- a/config.json
+++ b/config.json
@@ -129,6 +129,10 @@
                             "name": "Kate Kobinsky"
                         },
                         {
+                            "value": "kari",
+                            "name": "Kari Giacalone"
+                        },
+                        {
                             "value": "holly",
                             "name": "Holly Prince"
                         }
