Correcting bugs in payment

--- a/config.json
+++ b/config.json
@@ -129,12 +129,8 @@
                             "name": "Kate Kobinsky"
                         },
                         {
-                            "value": "kari",
-                            "name": "Kari Giacalone"
-                        },
-                        {
-                            "value": "holly",
-                            "name": "Holly Prince"
+                            "value": "none",
+                            "name": "No Signature"
                         }
                     ]
                 },
